--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -4,13 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Next Level Website</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-    <H6>Lorem ipsum dolor sit amet consectetur, adipisicing elit. </H6>
-    {{peoples}}
-    
-       <script>
-        console.log("Hey Django")
-       </script>
+<h4>Lorem ipsum dolor sit amet consectetur, adipisicing elit. </H4>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+<table border="2px solid black;" >
+    <tr>
+      <th>Sr. NO</th>
+      <th>Boys Name</th>
+      <th>Age</th>
+      <th>Can VOTE</th>     
+    </tr>
+
+    {% for people in peoples %}
+
+    <tr border="2px">
+      <td>{{forloop.counter}}</td>
+      <td>{{people.name}}</td>
+      <td>{{people.age}}</td>
+      <td {% if people.age < 18 %} style="background: blueviolet" {% endif %}> 
+        {% if people.age >= 18 %}
+        👍
+        {% else  %}
+        🤦‍♂️
+        {% endif %}
+
+      </td>
+    </tr>
+
+    {% endfor %}
+</table>
+<a href="/contact/">Go to contact</a>
+<a href="/about/">Go to about</a>
+
 </body>
 </html>
