--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -1,13 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block start %}
     <h3>this is my about page for the website for the app</h3>
     <a href="/">Go to Home</a>
+    
     <a href="/contact/">Go to contact</a>
-</body>
-</html>
+    {% endblock %}
