--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,16 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Next Level Website</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block start %}
+
 <h4>Lorem ipsum dolor sit amet consectetur, adipisicing elit. </H4>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
-<table border="2px solid black;" >
+<table style="width:100%" >
     <tr>
       <th>Sr. NO</th>
       <th>Boys Name</th>
@@ -20,7 +15,7 @@
 
     {% for people in peoples %}
 
-    <tr border="2px">
+    <tr>
       <td>{{forloop.counter}}</td>
       <td>{{people.name}}</td>
       <td>{{people.age}}</td>
@@ -36,8 +31,10 @@
 
     {% endfor %}
 </table>
+
+
+
 <a href="/contact/">Go to contact</a>
 <a href="/about/">Go to about</a>
 
-</body>
-</html>
+{% endblock %}
