vege-receipe project and data added to front to back

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -36,5 +36,6 @@
 
 <a href="/contact/">Go to contact</a>
 <a href="/about/">Go to about</a>
+<a href="/receipes/">Go to Receipes</a>
 
 {% endblock %}
