--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -5,4 +5,6 @@
     <a href="/">Go to Home</a>
     
     <a href="/contact/">Go to contact</a>
-    {% endblock %}
+    <a href="/receipes/">Go to Receipes</a>
+  
+{% endblock %}
