--- a/home/templates/home/contact.html
+++ b/home/templates/home/contact.html
@@ -28,5 +28,6 @@
       </table>
     <a href="/">Go to Home</a>
 <a href="/about/">Go to about</a>
+<a href="/receipes/">Go to Receipes</a>
 
 {% endblock %}
