--- a/vege/templates/receipes.html
+++ b/vege/templates/receipes.html
@@ -25,9 +25,33 @@
         
         <button type="submit" class="btn btn-success">Add Receipe</button>
     </form>
-   
 
+    {{receipes}}
 
+    <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Receipe name</th>
+            <th scope="col">receipe description</th>
+            <th scope="col">Image</th>
+            <th scope="col">Actions</th>
+          </tr>
+        </thead>
+        <tbody>
+        {% for receipe in receipes%}
+          <tr>
+            <th scope="row">{{forloop.counter}}</th>
+            <td>{{receipe.receipe_name}}</td>
+            <td>{{receipe.receipe_description}}</td>
+            <td>
+                <img src="/public/static/" style="width: 250px;"></td>
+                <td> 
+                <a href="/delete-receipe/{{receipe.id}}/" class="btn btn-danger">Delete</a>   </td>
+          </tr>
+        {% endfor %}
+        </tbody>
+      </table>
 </div>
 
 <hr>
