completed the receipe menu website with CRUD operation#10

--- a/vege/templates/receipes.html
+++ b/vege/templates/receipes.html
@@ -58,7 +58,7 @@
             <td>{{receipe.receipe_name}}</td>
             <td>{{receipe.receipe_description}}</td>
             <td>
-                <img src= "/receipe/receipe/receipe/"> MY_IMAGE</td>
+                <img src="/media/{{receipe.receipe_image}}" style="height : 200px" > </td>
             <td> 
                 <a href="/delete-receipe/{{receipe.id}}/" class="btn btn-danger m-2"> Delete </a>
             
