Done with Receipe app

--- a/vege/templates/update_receipes.html
+++ b/vege/templates/update_receipes.html
@@ -20,7 +20,7 @@
     
         <div class="mb-3">
         <label for="exampleInputPassword1" class="form-label">Receipe Image</label>
-        <input name="receipe_image" type="file" class="form-control">
+        <input name="receipe_image" type="file" class="form-control" value="z{{receipe.receipe_image}}">
         </div>
         
         <button type="submit" class="btn btn-success">Update Receipe</button>
