--- a/vege/templates/receipes.html
+++ b/vege/templates/receipes.html
@@ -31,7 +31,7 @@
         <form >
         <div class="mb-3">            
           <label for="exampleInputEmail1" class="form-label">Search Receipe</label>
-          <input name="Search"  type="text" class="form-control">          
+          <input name="search"  type="text" class="form-control">          
           
         </div>
         <button type="submit" class="btn btn-primary"> Search</button>
