added authentication for user and register users#11

--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -2,7 +2,7 @@
 
 {% block start %}
     <h3>this is my about page for the website for the app</h3>
-    <a href="/">Go to Home</a>
+    <a href="/">Home</a>
     
     <a href="/contact/">Go to contact</a>
     <a href="/receipes/">Go to Receipes</a>
