--- a/home/templates/home/contact.html
+++ b/home/templates/home/contact.html
@@ -26,7 +26,7 @@
           <td>80</td>
         </tr>
       </table>
-    <a href="/">Go to Home</a>
+    <a href="/">Home</a>
 <a href="/about/">Go to about</a>
 <a href="/receipes/">Go to Receipes</a>
 
