--- a/vege/templates/receipes.html
+++ b/vege/templates/receipes.html
@@ -25,19 +25,6 @@
         
         <button type="submit" class="btn btn-success">Add Receipe</button>
     </form>
-    <hr>
-    <div class="mt-5">
-      <div class="mx-auto col-6">
-        <form >
-        <div class="mb-3">            
-          <label for="exampleInputEmail1" class="form-label">Search Receipe</label>
-          <input name="search"  type="text" class="form-control">          
-          
-        </div>
-        <button type="submit" class="btn btn-primary"> Search</button>
-        </form>
-      </div>
-    </div>
 
     <!-- {{receipes}} -->
 
@@ -73,7 +60,7 @@
 
 
 
-<a href="/">Go to Home</a>
+<a href="/">Home</a>
 <a href="/contact/">Go to contact</a>
 <a href="/about/">Go to About</a>
 {% endblock %}
